--- a/styles.css
+++ b/styles.css
@@ -14,12 +14,28 @@
     font-size: 2rem;
     padding: 100px;
     color: black;
-    /* text-shadow: 0 0 10px black; */
+    line-height: 80px;
 }
 
+.ul-social {
+    text-align: center;
+    margin-top: 20px;
+    padding-left: 0;
+}
+  
+.li-social-links {
+    display: inline-block;
+    list-style: none;
+}
+  
+.social {
+    font-size: 1.3em;
+    color: #4A4A4A;
+    padding: 20px;
+}
 
 .middle {
-    background: #FFFFF0;
+    background: rgba(242, 242, 242, .6);
     padding: 100px;
 }
 
@@ -40,13 +56,14 @@
 
 .projects {
     padding: 100px;
-    text-align: center;
+    
 }
 
 .projects--text {
     color: #4A4A4A;
     font-size: 3rem;
     margin-bottom: 70px;
+    text-align: center;
 }
 
 .projects-grid {
@@ -63,7 +80,7 @@
     justify-self: center;
 }
 
-.contact--form {
+/* .contact--form {
     text-align: center;
     display: block;
 }
@@ -86,7 +103,7 @@ input, textarea {
 
 input {
     height: 100px;
-}
+} */
 @media screen and (min-width: 1000px) {
     .projects-grid {
         padding-left: auto;
@@ -97,3 +114,33 @@ input {
         height: 300px;
     }
 }
+
+.form {
+    max-width: 500px;
+    margin: 0 auto;
+  }
+  
+  .form input, .form textarea {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    border-radius: 4px;
+    border: none;
+    margin-bottom: 10px;
+    color: #fff;
+  }
+  
+  .form textarea {
+    height: 150px;
+    resize: none;
+  }
+  
+  .form button {
+    display: block;
+    width: 100%;
+    background: #fff;
+    border-radius: 4px;
+    padding: 5px 10px;
+    border: none;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+  }
